cards no wrap and fixed bug in gallery

--- a/css/main.css
+++ b/css/main.css
@@ -12,9 +12,13 @@
     --blackBackground: #302f2f;
 }
 
-.card-columns {
-    column-count: 2;
+.wrap {
+    overflow-wrap: break-word;
+    word-wrap: break-word;
+    min-width: 1%;
 }
+
+
 
 .special {
     color: var(--orangeText);
